Meta Tags Google

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Teste seus conhecimentos geográficos! Consegue nomear todos os 196 países reconhecidos pela ONU em 12 minutos? Quiz interativo com mapa mundial." />
     <meta name="author" content="Quiz dos Países" />
 
+    <meta name="google-adsense-account" content="ca-pub-2940541155900814">
+
     <meta property="og:title" content="Quiz dos Países do Mundo" />
     <meta property="og:description" content="Teste seus conhecimentos geográficos! Consegue nomear todos os 196 países reconhecidos pela ONU em 12 minutos?" />
     <meta property="og:type" content="website" />
